# yugioh-cardmarket-tools

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/api/: api_providers.dart  postik_api.dart
frontend/lib/models/: app_config.dart  layout_spec.dart  sheet_spec.dart  sticker_order.dart
frontend/lib/screens/: about_screen.dart  app_shell.dart  compose_screen.dart  settings_screen.dart  splash_screen.dart
frontend/lib/state/: compose_controller.dart  settings_controller.dart
frontend/lib/theme/: app_colors.dart  app_gradients.dart  app_theme.dart
frontend/lib/widgets/: app_logo.dart  gradient_button.dart  preview_pane.dart  recipient_card.dart
frontend/test/: app_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
src/postik/: __init__.py  __main__.py
src/postik/api/: __init__.py  main.py
src/postik/cli/: __init__.py  app.py
src/postik/core/: config.py  models.py  pipeline.py  render.py
src/postik/io/: __init__.py
src/yugioh_shipping/: __init__.py  __main__.py
src/yugioh_shipping/api/: __init__.py  main.py
src/yugioh_shipping/cli/: app.py
src/yugioh_shipping/core/: __init__.py  config.py  label.py  layouts.py  models.py  preview.py  render.py  sheets.py
src/yugioh_shipping/io/: cardmarket.py  manifest.py
tests/: samples.py  test_api.py  test_cardmarket.py  test_cli.py  test_geometry.py  test_label_preview.py  test_manifest.py  test_models.py  test_render.py  test_sheets_layouts.py
